--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,6 @@
     <string name="market_phone">Market Phone</string>
     <string name="share_message">Hey, Saya Membeli %1$d Gadget dengan harga %2$d . Apakah Sedia Stok?</string>
     <string name="no_data_available">Data Kosong</string>
-    <string name="nama_profil">Nama : Ahmad Rivaio</string>
-    <string name="email">Email : Ahmadrivai.fun@gmail.com</string>
+    <string name="nama_profil">Nama : Ahmad Rivai</string>
+    <string name="email">Email : Ahmadrivai.fun18@gmail.com</string>
 </resources>
